--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
-    "html.format.wrapAttributes": "force-aligned",
+    // "html.format.wrapAttributes": "force-aligned",
     "workbench.colorCustomizations": {
-        // "activityBar.background": "#b864d2"
-        // "activityBar.foreground": "#15202b",
-        // "activityBar.inactiveForeground": "#15202b99",
-        // "activityBarBadge.background": "#63521d",
-        // "activityBarBadge.foreground": "#e7e7e7",
-        "titleBar.activeBackground": "#c63d3d"
-        // "titleBar.inactiveBackground": "#a63dc699",
-        // "titleBar.activeForeground": "#e7e7e7",
-        // "titleBar.inactiveForeground": "#e7e7e799",
-        // "statusBar.background": "#a63dc6",
-        // "statusBarItem.hoverBackground": "#b864d2",
-        // "statusBar.foreground": "#e7e7e7"
+        "activityBar.background": "#df5151cc",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#43dc43",
+        "activityBarBadge.foreground": "#15202b",
+        "titleBar.activeBackground": "#d62727cc",
+        "titleBar.inactiveBackground": "#d6272799",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "statusBar.background": "#d62727cc",
+        "statusBarItem.hoverBackground": "#df5151cc",
+        "statusBar.foreground": "#e7e7e7"
     },
     "editor.formatOnSave": true,
-    "peacock.color": "#a63dc6"
+    "peacock.color": "#d62727cc"
 }
