--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
         "@angular/platform-browser": "~8.2.4",
         "@angular/platform-browser-dynamic": "~8.2.4",
         "@angular/router": "~8.2.4",
-        "@ng-bootstrap/ng-bootstrap": "^5.1.0",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
-        "bootstrap": "^4.3.1",
         "core-js": "^3.2.1",
+        "font-awesome": "^4.7.0",
         "rxjs": "~6.5.2",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
