--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
         "core-js": "^3.2.1",
+        "fabric": "^3.4.0",
         "font-awesome": "^4.7.0",
+        "pixi.js": "^5.1.2",
         "rxjs": "~6.5.2",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
